<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_podium"
        android:icon="@drawable/ic_podium"
        android:title="Top 3"
        android:contentDescription="View Top 3"
        app:showAsAction="always" />
</menu>