<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_popular"
        android:icon="@drawable/ic_popular"
        android:title="Popular Locations"
        android:contentDescription="Popular Locations"
        app:showAsAction="ifRoom" />
</menu>