...
                        android:text="Account Actions"
                        android:textAppearance="?attr/textAppearanceTitleLarge"
                        android:textColor="@color/dark_green"
                        android:layout_marginBottom="16dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/logoutButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:padding="12dp"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:backgroundTint="@color/dark_green"
...
